# llamaindex-chat-with-streamlit-docs

./: .env  .gitignore  README.md  fetch_data.py  fetch_xml.py  global_config.py  pyproject.toml  streamlit_app.py  streamlit_app_query_builder.py
data/: 101_a59d184cf9cc2cfecb331c7cd5a864fe_main.xml  101_a59d184cf9cc2cfecb331c7cd5a864fe_main_searchable.txt  103_4358e331f543193440f7c1079da8340a_main.xml  1948_2ef55d9483753350b06babffe4398b1d_main.xml  1948_2ef55d9483753350b06babffe4398b1d_main_searchable.txt  2411_650574620140779d010f0f0dd5d1e953_main.xml  316_bf55ae07c86b2ca8f77ffb1c73c5aeb7_main.xml  aggregations.json  contracts_index.json
